# Kotlin-Vulkan

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/com/icuxika/kv/jextract/demo/: FILE.java  OnEach.java  Person.java  RuntimeHelper.java  _Mbstatet.java  __crt_locale_data_public.java  __crt_locale_pointers.java  _iobuf.java  _stat32.java  _stat32i64.java  _stat64.java  _stat64i32.java  _wfinddata32_t.java  _wfinddata32i64_t.java  _wfinddata64_t.java  _wfinddata64i32_t.java  constants$0.java  constants$1.java  constants$10.java  constants$11.java  constants$12.java  constants$13.java  constants$14.java  constants$15.java  constants$16.java  constants$17.java  constants$18.java  constants$19.java  constants$2.java  constants$20.java  constants$21.java  constants$22.java  constants$23.java  constants$24.java  constants$25.java  constants$26.java  constants$27.java  constants$28.java  constants$29.java  constants$3.java  (+64 more)
app/src/main/java/com/icuxika/kv/jextract/glfw/: GLFWallocatefun.java  GLFWallocator.java  GLFWcharfun.java  GLFWcharmodsfun.java  GLFWcursorenterfun.java  GLFWcursorposfun.java  GLFWdeallocatefun.java  GLFWdropfun.java  (+2897 more)
app/src/main/kotlin/com/icuxika/kv/: App.kt  Application.kt  FFMDemo.kt  Win32Demo.kt
app/src/main/kotlin/com/icuxika/kv/graphics/: Context.kt  GlobalConfig.kt
app/src/main/resources/: jextract.h
app/src/test/kotlin/com/icuxika/kv/: AppTest.kt
demo-cmake/: CMakeLists.txt  buildLibrary.ps1  main.c
demo-cmake/include/: ffm.h
demo-cmake/src/: ffm.c
win32/: README.md  includes.txt
(+10 files in other folders)
